--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,21 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
-@background: #f7f7f7;
-@backgroundCanvas: #000;
-
-* {
-    padding: 0;
-    margin: 0;
-}
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background: @background;
+    font-family: 'Press Start 2P', cursive;
 }
 
-.canvas {
-    display: block;
-    width: 300px;
-    height: 300px;
-    margin: 25px auto 0;
-    background: @backgroundCanvas;
+.grid {
+    display: grid;
+    grid-template-columns: 320px 200px;
+}
+
+.right-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.game-board {
+    border: solid 2px;
+}
+
+.play-button {
+    background-color: #4caf50;
+    font-size: 16px;
+    padding: 15px 30px;
+    cursor: pointer;
 }
