--- a/src/less/main.less
+++ b/src/less/main.less
@@ -20,8 +20,10 @@ body {
 }
 
 .play-button {
-    background-color: #4caf50;
-    font-size: 16px;
     padding: 15px 30px;
+    font-size: 16px;
+    font-weight: 900;
+    color: #fff;
+    background-color: #639;
     cursor: pointer;
 }
